<resources>
    <string name="app_name" translatable="false">NewPipe</string>
    <string name="main_bg_subtitle">Tap search to get started</string>
    <string name="view_count_text">%1$s views</string>
    <string name="upload_date_text">Published on %1$s</string>
    <string name="no_player_found">No stream player found. Do you want to install VLC?</string>
    <string name="no_player_found_toast">No stream player found (you can install VLC to play it).</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="fdroid_vlc_url" translatable="false">https://f-droid.org/repository/browse/?fdfilter=vlc&amp;fdid=org.videolan.vlc</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="open_in_popup_mode">Open in popup mode</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="controls_download_desc">Download stream file</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="did_you_mean">Did you mean: %1$s\?</string>
    <string name="share_dialog_title">Share with</string>
    <string name="choose_browser">Choose browser</string>
    <string name="screen_rotation">rotation</string>
    <string name="use_external_video_player_title">Use external video player</string>
    <string name="use_external_video_player_summary">Removes audio at SOME resolutions</string>
    <string name="use_external_audio_player_title">Use external audio player</string>
    <string name="popup_mode_share_menu_title">NewPipe popup mode</string>
    <string name="rss_button_title" translatable="false">RSS</string>
    <string name="subscribe_button_title">Subscribe</string>
    <string name="subscribed_button_title">Subscribed</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="channel_unsubscribed">Channel unsubscribed</string>
    <string name="subscription_change_failed">Could not change subscription</string>
    <string name="subscription_update_failed">Could not update subscription</string>
    <string name="show_info">Show info</string>
    <string name="tab_main">Main</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="tab_bookmarks">Bookmarked Playlists</string>
    <string name="tab_new">New Tab</string>
    <string name="tab_choose">Choose Tab</string>
    <string name="fragment_whats_new">What\'s New</string>
    <string name="controls_background_title">Background</string>
    <string name="controls_popup_title">Popup</string>
    <string name="controls_add_to_playlist_title">Add To</string>
    <string name="download_path_title">Video download folder</string>
    <string name="download_path_summary">Downloaded video files are stored here</string>
    <string name="download_path_dialog_title">Choose the download folder for video files</string>
    <string name="download_path_audio_title">Audio download folder</string>
    <string name="download_path_audio_summary">Downloaded audio files are stored here</string>
    <string name="download_path_audio_dialog_title">Choose the download folder for audio files</string>
    <string name="download_choose_new_path">Change the download folders to take effect</string>
    <string name="autoplay_by_calling_app_title">Autoplay</string>
    <string name="autoplay_by_calling_app_summary">Plays a video when NewPipe is called from another app</string>
    <string name="default_resolution_title">Default resolution</string>
    <string name="default_popup_resolution_title">Default popup resolution</string>
    <string name="show_higher_resolutions_title">Show higher resolutions</string>
    <string name="show_higher_resolutions_summary">Only some devices support playing 2K/4K videos</string>
    <string name="play_with_kodi_title">Play with Kodi</string>
    <string name="kore_not_found">Kore app not found. Install it?</string>
    <string name="kore_package" translatable="false">org.xbmc.kore</string>
    <string name="show_play_with_kodi_title">Show \"Play with Kodi\" option</string>
    <string name="enable_lock_screen_video_thumbnail_title">Enable lock screen video thumbnail</string>
    <string name="show_play_with_kodi_summary">Display an option to play a video via Kodi media center</string>
    <string name="enable_lock_screen_video_thumbnail_summary">When using the background player a video thumbnail will be displayed on the lock screen</string>
    <string name="play_audio">Audio</string>
    <string name="default_audio_format_title">Default audio format</string>
    <string name="default_video_format_title">Default video format</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme_title">Light</string>
    <string name="dark_theme_title">Dark</string>
    <string name="black_theme_title">Black</string>
    <string name="popup_remember_size_pos_title">Remember popup size and position</string>
    <string name="popup_remember_size_pos_summary">Remember last size and position of popup</string>
    <string name="use_inexact_seek_title">Use fast inexact seek</string>
    <string name="use_inexact_seek_summary">Inexact seek allows the player to seek to positions faster with reduced precision</string>
    <string name="seek_duration_title">Fast-forward/-rewind seek duration</string>
    <string name="download_thumbnail_title">Load thumbnails</string>
    <string name="show_comments_title">Show comments</string>
    <string name="show_comments_summary">Disable to stop showing comments</string>
    <string name="download_thumbnail_summary">Turn off to prevent loading thumbnails, saving data and memory usage. Changes clear both in-memory and on-disk image cache.</string>
    <string name="thumbnail_cache_wipe_complete_notice">Image cache wiped</string>
    <string name="metadata_cache_wipe_title">Wipe cached metadata</string>
    <string name="metadata_cache_wipe_summary">Remove all cached webpage data</string>
    <string name="metadata_cache_wipe_complete_notice">Metadata cache wiped</string>
    <string name="auto_queue_title">Auto-queue next stream</string>
    <string name="auto_queue_summary">Auto-append a related stream when playing the last stream in a non-repeating queue</string>
    <string name="volume_gesture_control_title">Volume gesture control</string>
    <string name="volume_gesture_control_summary">Use gestures to control the volume of the player</string>
    <string name="brightness_gesture_control_title">Brightness gesture control</string>
    <string name="brightness_gesture_control_summary">Use gestures to control the brightness of the player</string>
    <string name="player_gesture_controls_title">Player gesture controls</string>
    <string name="player_gesture_controls_summary">Use gestures to control the brightness and volume of the player</string>
    <string name="show_search_suggestions_title">Search suggestions</string>
    <string name="show_search_suggestions_summary">Show suggestions when searching</string>
    <string name="enable_search_history_title">Search history</string>
    <string name="enable_search_history_summary">Store search queries locally</string>
    <string name="enable_watch_history_title">Watch history</string>
    <string name="enable_playback_resume_title">Resume playback</string>
    <string name="enable_playback_resume_summary">Restore last playback position</string>
    <string name="enable_playback_state_lists_title">Positions in lists</string>
    <string name="enable_playback_state_lists_summary">Show playback position indicators in lists</string>
    <string name="settings_category_clear_data_title">Clear data</string>
    <string name="enable_watch_history_summary">Keep track of watched videos</string>
    <string name="resume_on_audio_focus_gain_title">Resume on focus gain</string>
    <string name="resume_on_audio_focus_gain_summary">Continue playing after interruptions (e.g. phone calls)</string>
    <string name="download_dialog_title">Download</string>
    <string name="next_video_title">Next</string>
    <string name="autoplay_title">Autoplay</string>
    <string name="show_next_and_similar_title">Show \'Next\' and \'Similar\' videos</string>
    <string name="show_hold_to_append_title">Show \"Hold to append\" tip</string>
    <string name="show_hold_to_append_summary">Show tip when background or popup button is pressed on video details page</string>
    <string name="url_not_supported_toast">Unsupported URL</string>
    <string name="default_content_country_title">Default content country</string>
    <string name="service_title">Service</string>
    <string name="content_language_title">Default content language</string>
    <string name="peertube_instance_url_title">PeerTube instances</string>
    <string name="peertube_instance_url_summary">Select your favorite PeerTube instances</string>
    <string name="peertube_instance_url_help">Find the instances that best suit you on %s</string>
    <string name="peertube_instance_list_url" translatable="false">https://joinpeertube.org/instances#instances-list</string>
    <string name="peertube_instance_add_title">Add instance</string>
    <string name="peertube_instance_add_help">Enter instance URL</string>
    <string name="peertube_instance_add_fail">Could not validate instance</string>
    <string name="peertube_instance_add_https_only">Only HTTPS URLs are supported</string>
    <string name="peertube_instance_add_exists">Instance already exists</string>
    <string name="settings_category_player_title">Player</string>
    <string name="settings_category_player_behavior_title">Behavior</string>
    <string name="settings_category_video_audio_title">Video &amp; audio</string>
    <string name="settings_category_history_title">History &amp; cache</string>
    <string name="settings_category_popup_title">Popup</string>
    <string name="settings_category_appearance_title">Appearance</string>
    <string name="settings_category_other_title">Other</string>
    <string name="settings_category_debug_title">Debug</string>
    <string name="settings_category_updates_title">Updates</string>
    <string name="background_player_playing_toast">Playing in background</string>
    <string name="popup_playing_toast">Playing in popup mode</string>
    <string name="background_player_append">Queued on background player</string>
    <string name="popup_playing_append">Queued on popup player</string>
    <string name="c3s_url" translatable="false">https://www.c3s.cc/</string>
    <string name="play_btn_text">Play</string>
    <string name="content">Content</string>
    <string name="show_age_restricted_content_title">Age restricted content</string>
    <string name="video_is_age_restricted">Show age restricted video. Allowing such material is possible from Settings.</string>
    <string name="duration_live">LIVE</string>
    <string name="duration_live_button" translatable="false">LIVE</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_title">Downloads</string>
    <string name="error_report_title">Error report</string>
    <string name="all">All</string>
    <string name="channel">Channel</string>
    <string name="channels">Channels</string>
    <string name="playlist">Playlist</string>
    <string name="playlists">Playlists</string>
    <string name="smartlook_settings">Smartlook settings</string>
    <string name="apply_changes_n_this_will_restart_the_app">Apply changes and save\n(this will restart the app)</string>
    <string name="api_key">Api key</string>
    <string name="reload_ndefault">Reload\ndefault</string>
    <string name="smartlook_server">Smartlook server:</string>
    <string name="smartlook_api_key">Smartlook api key:</string>
    <string name="show_view_selector_on_click">Show View \"selector\" on click:</string>
    <string name="go_to_playground">Go to playground</string>
</resources>