<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="org.schabi.newpipe.smartlook.SmartlookSettingsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/light_settings_accent_color"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:title="@string/smartlook_settings"
            app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextAppearance="@style/Toolbar.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/smartlook_server" />

        <Spinner
            android:id="@+id/smartlook_server_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/server_array" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/smartlook_api_key" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/smartlook_input_api_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="true"
                android:hint="@string/api_key"
                android:textColor="@color/white"
                android:textColorHighlight="@color/bluegray"
                android:textCursorDrawable="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/smartlook_reload_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reload_ndefault" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_view_selector_on_click" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minWidth="8dp" />

            <Switch
                android:id="@+id/smartlook_debug_selectors_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AppCompat.Light.NoActionBar" />

        </LinearLayout>

        <Button
            android:id="@+id/smartlook_server_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/apply_changes_n_this_will_restart_the_app" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/smartlook_go_to_playground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/go_to_playground" />

    </LinearLayout>
</ScrollView>
